<resources>
    <string name="app_name">SKAMA</string>
    <string name="drawer_nav_open">Open menu</string>
    <string name="drawer_nav_close">Close menu</string>
    <string name="sharedpref_name">preferences</string>
    <string name="sharedpref_item_separator">;;;</string>
    <string name="sharedpref_crypto_alerts">crypto_alerts</string>
    <string name="sharedpref_stocks_alerts">stocks_alerts</string>
    <string name="sharedpref_crypto_owned_list">owned_crypto_list</string>
    <string name="sharedpref_stocks_owned_list">owned_stock_list</string>
    <string name="sharedpref_crypto_wallets_list">saved_wallets_list</string>
    <string name="sharedpref_first_run_flag">first_run</string>
    <string name="sharedpref_transaction_type_buy">BUY</string>
    <string name="sharedpref_transaction_type_sell">SELL</string>
    <string name="sharedpref_alert_type_below">BELOW</string>
    <string name="sharedpref_alert_type_above">ABOVE</string>
    <string name="no_internet_alert_title">Upozornění</string>
    <string name="no_internet_alert_mes">Není k dispozici internetové připojení!\nPřipojte se a akci opakujte.</string>
    <string name="no_internet_alert_ok">OK</string>
    <string name="crypto_menu">Kryptoměny</string>
    <string name="actual_value_crypto_menu">Aktuální stav</string>
    <string name="news_crypto_menu">Zprávy</string>
    <string name="history_crypto_menu">Historie nákupů</string>
    <string name="alert_crypto_menu">Upozornění</string>
    <string name="wallet_crypto_menu">Stav peněženky</string>
    <string name="converter_crypto_menu">Převodník</string>
    <string name="stocks_menu">Akcie</string>
    <string name="actual_value_stocks_menu">Aktuální stav</string>
    <string name="news_stocks_menu">Zprávy</string>
    <string name="history_stocks_menu">Historie nákupů</string>
    <string name="other_menu">Ostatní</string>
    <string name="other_settings_menu">Nastavení</string>
    <string name="other_about_menu">O aplikaci</string>
    <string name="about_title">Obecné informace</string>
    <string name="about_text">Tato aplikace vznikla v rámci bakalářské práce s názvem \"Správa kryptoměn a akcií v mobilní aplikaci\".\n</string>
    <string name="about_creator_title">Kontakt na autora</string>
    <string name="about_creator_text">Jméno: Ondřej Drtina\nE-mail: drtinao@students.zcu.cz\n</string>
    <string name="about_libraries_title">Použité knihovny třetích stran</string>
    <string name="about_libraries_text">Ke zjištění historických dat akcií jsem použil nástroj \"YahooFinanceAPI\", jež je dostupný pod MIT licencí na GitHubu: https://github.com/sstrickx/yahoofinance-api.\n\nPro získávání a zpracování textu zpráv je použita knihovna \"jsoup\" - dostupná z jsoup.org pod MIT licencí.\n\nZískávání obrázků ke zprávám je zajištěno knihovnou \"Picasso\" dostupnou pod Apache licencí, více informací lze nalézt na: https://square.github.io/picasso.\n\nGrafy v aplikaci jsou vytvářeny nástrojem \"MPAndroidChart\" s licencí Apache - GitHub: https://github.com/PhilJay/MPAndroidChart</string>
    <string name="about_materials_title">\nPoužité obrázky třetích stran</string>
    <string name="about_materials_text">Ikona aplikace byla vytvořena uživatelem <b>Eucalyp</b> z webu <b>www.flaticon.com</b>.\n\nIkony v navigačním panelu aplikace pocházejí z webu https://material.io a jsou distribuovány pod licencí Apache.\n</string>
    <string name="about_mit_title">Text MIT licence</string>
    <string name="about_mit_text">Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.\n</string>
    <string name="about_apache_title">Apache licence</string>
    <string name="about_apache_text">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="alert_simulation_menu">Přidat upozornění</string>
    <string name="simulate_simulation_menu">Simulovat transakci</string>
    <string name="add_history_menu">Přidat kryptoměny</string>
    <string name="graph_history_menu">Zobrazit graf</string>
    <string name="search_display_btn_stocks">zobrazit</string>
    <string name="search_manual_title_stocks">Instrukce</string>
    <string name="search_manual_first_part_stocks">Pro zobrazení cenového vývoje zadejte symbol požadované akcie do pole výše a klepněte na tlačítko s nápisem \"ZOBRAZIT\".\nSymboly akcií lze nalézt například na webu Yahoo Finance, ze kterého jsou data získávána. Seznam symbolů nejznámějších akciových firem je dostupný v seznamu níže.</string>
    <string name="search_pick_website_stocks">přejít na Yahoo Finance</string>
    <string name="search_pick_website_link_stocks">https://finance.yahoo.com/</string>
    <string-array name="actual_value_famous_list_name_stocks">
        <item>Apple Inc.</item>
        <item>Microsoft Corporation</item>
        <item>Amazon</item>
        <item>Facebook Inc.</item>
        <item>Alibaba Group</item>
        <item>Bank of America</item>
        <item>Wal-Mart Stores Inc.</item>
        <item>Visa Inc.</item>
        <item>Chevron Corporation</item>
        <item>UnitedHealth Group Inc.</item>
        <item>Pfizer Inc.</item>
        <item>China Mobile</item>
        <item>Home Depot</item>
        <item>Intel</item>
        <item>Advanced Micro Devices Inc.</item>
        <item>Verizon Communications</item>
        <item>Oracle Corporation</item>
        <item>Citigroup Inc.</item>
        <item>NVIDIA Corporation</item>
        <item>Tesla, Inc.</item>
        <item>Spotify Technology S.A.</item>
        <item>General Motors Company</item>
    </string-array>
    <string-array name="actual_value_famous_list_sym_stocks">
        <item>AAPL</item>
        <item>MSFT</item>
        <item>AMZN</item>
        <item>FB</item>
        <item>BABA</item>
        <item>BAC</item>
        <item>WMT</item>
        <item>V</item>
        <item>CVX</item>
        <item>UNH</item>
        <item>PFE</item>
        <item>CHL</item>
        <item>HD</item>
        <item>INTL</item>
        <item>AMD</item>
        <item>VZ</item>
        <item>ORCL</item>
        <item>C</item>
        <item>NVDA</item>
        <item>TSLA</item>
        <item>SPOT</item>
        <item>GM</item>
    </string-array>
    <string name="first_tab_title_stocks">aktuální</string>
    <string name="second_tab_title_stocks">historie</string>
    <string name="newly_added_stock">Akcie firmy byly přidány mezi sledované akcie.</string>
    <string name="already_added_stock">Akcie dané firmy již byly přidány, nelze přidat!</string>
    <string name="newly_added_stock_alert">Upozornění pro akcie dané firmy bylo úspěšně přidáno.</string>
    <string name="already_added_stock_alert">Upozornění pro danou firmu již bylo přidáno, nelze přidat!</string>
    <string name="basic_info_title_stocks">Základní informace</string>
    <string name="actual_value_stocks">aktuální hodnota: </string>
    <string name="add_btn_stock">Přidat mezi sledované akcie</string>
    <string name="time_progression_stocks">Vývoj ceny během posledního měsíce</string>
    <string name="pick_date_title_stocks">Vyberte datum</string>
    <string name="date_from_stocks">od: </string>
    <string name="date_to_stocks">do: </string>
    <string name="date_hint_stocks">zvolte datum</string>
    <string name="show_progression_btn_stocks">Zobrazit vývoj!</string>
    <string name="time_progression_select_stocks">Vývoj ceny ve zvoleném čas. období</string>
    <string name="first_tab_title_crypto">aktuální</string>
    <string name="second_tab_title_crypto">historie</string>
    <string name="newly_added_crypto">Kryptoměna byla přidána mezi sledované kryptoměny.</string>
    <string name="already_added_crypto">Kryptoměna již byla přidána, nelze přidat!</string>
    <string name="newly_added_crypto_alert">Upozornění pro danou kryptoměnu bylo úspěšně přidáno.</string>
    <string name="already_added_crypto_alert">Upozornění pro danou kryptoměnu již bylo přidáno, nelze přidat!</string>
    <string name="actual_value_crypto_detail_sim_title">Přidat upozornění</string>
    <string name="actual_value_crypto_detail_sim_message">Níže vyplňte údaje související s upozorněním na změnu ceny jednoho kusu kryptoměny. Můžete být upozorněni, když hodnota kusu kryptoměny klesne pod určitou částku, či pokud se navýší nad určitou částku.</string>
    <string name="actual_value_crypto_detail_sim_add">Přidat upozornění</string>
    <string name="actual_value_crypto_detail_sim_cancel">Zrušit</string>
    <string name="converter_amount_in_crypto">vstupní částka: </string>
    <string name="converter_amount_in_hint_crypto">zadejte částku pro převod</string>
    <string name="converter_from_crypto">z: </string>
    <string name="converter_select_hint_crypto">zvolte kryptoměnu</string>
    <string name="converter_to_crypto">na: </string>
    <string name="converter_amount_out_crypto">výstupní částka: </string>
    <string name="converter_amount_out_hint_crypto">nejprve proveďte převod</string>
    <string name="converter_perform_btn_crypto">Provést převod</string>
    <string name="converter_search_hint_crypto">zadejte název či symbol</string>
    <string name="choice_text_settings">volba: </string>
    <string name="preferred_prompt_settings">vyberte zdroj</string>
    <string name="first_tab_title_settings">obecné</string>
    <string name="second_tab_title_settings">kryptoměny</string>
    <string name="third_tab_title_settings">akcie</string>
    <string name="preferred_currency_title">Preferovaná měna</string>
    <string name="history_crypto_dialog_name_tv">název: </string>
    <string name="history_crypto_dialog_symbol_tv">symbol: </string>
    <string name="history_crypto_dialog_count_tv">celkový počet: </string>
    <string name="history_crypto_dialog_invested_tv">celkově investováno: </string>
    <string name="history_crypto_dialog_type_buy_radio">nákup</string>
    <string name="history_crypto_dialog_type_sell_radio">prodej</string>
    <string name="history_crypto_dialog_amount_tv">celkový počet: </string>
    <string name="history_crypto_dialog_amount_hint">celkový počet</string>
    <string name="history_crypto_dialog_price_tv">cena za jednotku: </string>
    <string name="history_crypto_dialog_price_hint">cena za kus</string>
    <string name="history_crypto_dialog_date_tv">datum: </string>
    <string name="history_crypto_dialog_date_hint">zvolte datum</string>
    <string name="history_crypto_dialog_time_tv">čas: </string>
    <string name="history_crypto_dialog_time_hint">zvolte čas</string>
</resources>