<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light" android:orientation="vertical">
        <TextView
            android:textAppearance="@style/HeadlineEditSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_title" />

        <TextView
            android:id="@+id/about_tv_id"
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/about_text" />

        <TextView
            android:textAppearance="@style/HeadlineEditSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_creator_title" />

        <TextView
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/about_creator_text" />

        <TextView
            android:textAppearance="@style/HeadlineEditSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_libraries_title" />

        <TextView
            android:textAppearance="@style/DescBox"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/about_libraries_text" />

        <TextView
            android:textAppearance="@style/HeadlineEditSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_materials_title" />

        <TextView
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:autoLink="web"
            android:text="@string/about_materials_text" />

        <TextView
            android:textAppearance="@style/HeadlineEditSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_mit_title" />

        <TextView
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/about_mit_text" />

        <TextView
            android:textAppearance="@style/HeadlineEditSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_apache_title" />

        <TextView
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/about_apache_text"
            android:autoLink="web" />
    </LinearLayout>
</ScrollView>