<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <LinearLayout
        android:id="@+id/converter_crypto_user_amount_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/converter_crypto_user_amount_tv_id"
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/converter_amount_in_crypto" />

        <EditText
            android:id="@+id/converter_crypto_user_amount_et_id"
            android:maxLength="11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wallet_crypto_addr_tv_id"
            android:inputType="numberDecimal"
            android:hint="@string/converter_amount_in_hint_crypto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/converter_crypto_sel_layout_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/converter_crypto_user_amount_layout_id">

        <TextView
            android:id="@+id/converter_crypto_sel_from_tv_id"
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_from_crypto"/>

        <EditText
            android:id="@+id/converter_crypto_sel_from_et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none|textNoSuggestions"
            android:focusable="false"
            android:hint="@string/converter_select_hint_crypto" />

        <TextView
            android:id="@+id/converter_crypto_sel_from_crypto_id_hidden_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/converter_crypto_sel_to_tv_id"
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_to_crypto" />

        <EditText
            android:id="@+id/converter_crypto_sel_to_et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none|textNoSuggestions"
            android:focusable="false"
            android:hint="@string/converter_select_hint_crypto" />

        <TextView
            android:id="@+id/converter_crypto_sel_to_crypto_id_hidden_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/converter_crypto_converted_amount_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/converter_crypto_sel_layout_id"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/converter_crypto_converted_amount_tv_id"
            android:textAppearance="@style/DescBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/converter_amount_out_crypto" />

        <EditText
            android:id="@+id/converter_crypto_converted_amount_et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wallet_crypto_addr_tv_id"
            android:inputType="none"
            android:focusable="false"
            android:hint="@string/converter_amount_out_hint_crypto" />
    </LinearLayout>

    <Button
        android:id="@+id/converter_crypto_convert_btn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/converter_crypto_converted_amount_layout_id"
        android:text="@string/converter_perform_btn_crypto" />

    <SearchView
        android:id="@+id/converter_crypto_search_sv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/converter_crypto_convert_btn_id"
        android:iconifiedByDefault="false"
        android:queryHint="@string/converter_search_hint_crypto"/>

    <ListView
        android:id="@+id/converter_crypto_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/converter_crypto_search_sv_id">
    </ListView>
</RelativeLayout>